Table User {
    id int [pk]
}

Table Customer {
    id int [pk]
    phone_number varchar
    address varchar
    user_id int [ref: - User.id]
}

Table Favorite {
    id int [pk]
    customer_id int [ref: > Customer.id]
    seller_id int [ref: > Customer.id]
}

Table Order {
    id int [pk]
    created_date date
    customer_id int [ref: > Customer.id]
    payment_type_id int [ref: > Payment.id]
}

Table OrderProduct {
    id int [pk]
    order_id int [ref: > Order.id]
    product_id int [ref: > Product.id]
}

Table Payment {
    id int [pk]
    deleted date
    deleted_by_cascade bool
    merchant_name varchar
    account_number varchar
    expiration_date date
    create_date date
    customer_id int [ref: > Customer.id]
}

Table Product {
    id int [pk]
    deleted date
    deleted_by_cascade bool
    name varchar
    price float
    description varchar
    quantity int
    created_date date
    location varchar
    image_path varchar
    customer_id int [ref: > Customer.id]
    category_id int [ref: > ProductCategory.id]
}

Table ProductCategory {
    id int [pk]
    name varchar
}

Table ProductRating {
    id int [pk, increment]
    rating int
    customer_id int [ref: > Customer.id]
    product_id int [ref: > Product.id]
}

Table Recommendation {
    id int [pk, increment]
    customer_id int [ref: > Customer.id]
    product_id int [ref: > Product.id]
    recommender_id int [ref: > Customer.id]
}

Table Store {
    id int [pk, increment]
    user_id int [ref: - User.id]
    name varchar
    description varchar
}

Table StoreProduct {
    id int [pk, increment]
    store_id int [ref: > Store.id]
    product_id int [ref: > Product.id]
}